--- a/src/main/webapp/WEB-INF/views/product/create.html
+++ b/src/main/webapp/WEB-INF/views/product/create.html
@@ -7,12 +7,12 @@
 <body>
 <h1>Tạo sản phẩm</h1>
 <a th:href="@{/products/list}">Danh sách sản phẩm</a>
-<form th:action="@{/products/create}" method="post" th:object="${product}">
+<form th:action="@{/products/create}" method="post" th:object="${product}" enctype="multipart/form-data">
     <input type="text" placeholder="mã sản phẩm" th:field="*{id}">
     <input type="text" placeholder="tên sản phẩm" th:field="*{name}">
     <input type="text" placeholder="giá sản phẩm" th:field="*{price}">
     <input type="text" placeholder="mô tả sản phẩm" th:field="*{description}">
-    <input type="text" placeholder="ảnh sản phẩm" th:field="*{image}">
+    <input type="file" th:field="*{image}">
     <button>Tạo mới</button>
 </form>
 </body>
