--- a/src/main/webapp/WEB-INF/views/product/edit.html
+++ b/src/main/webapp/WEB-INF/views/product/edit.html
@@ -5,11 +5,13 @@
 <body>
 <h1>Chỉnh sửa thông tin sản phẩm</h1>
 <a th:href="@{/products/list}">Danh sách sản phẩm</a>
-<form th:action="@{/products/edit/__${product.id}__}" method="post" th:object="${product}">
+<form th:action="@{/products/edit/__${product.id}__}" method="post"
+      th:object="${product}" enctype="multipart/form-data">
     <input type="text" placeholder="tên sản phẩm" th:field="*{name}">
     <input type="text" placeholder="giá sản phẩm" th:field="*{price}">
     <input type="text" placeholder="mô tả sản phẩm" th:field="*{description}">
-    <input type="text" placeholder="Ảnh sản phẩm" th:field="*{image}">
+    <input type="file" placeholder="Ảnh sản phẩm" th:field="*{image}">
+    <img th:src="@{/image/__${product.image}__}" height="150" alt="">
     <button>Chỉnh sửa</button>
 </form>
 <footer th:replace="product/layout::footer"></footer>
