--- a/src/main/webapp/WEB-INF/views/product/layout.html
+++ b/src/main/webapp/WEB-INF/views/product/layout.html
@@ -69,6 +69,7 @@
 
     .notify span{font-size: 15px; color: blue;}
   </style>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
 <body>
 
