--- a/src/main/webapp/WEB-INF/views/error-404.html
+++ b/src/main/webapp/WEB-INF/views/error-404.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<h1>NOT FOUND</h1>
+<a href="/not-found?lang=en">English</a>|<a href="/not-found?lang=vi">Vietnamese</a>
+<h1 th:text="#{notfound.text}"></h1>
+<p th:text="#{classname.text}"></p>
 </body>
 </html>
